--- a/src/index.css
+++ b/src/index.css
@@ -23,12 +23,14 @@
   box-sizing: border-box;
 }
 
-body {
+html, body {
   font-family: var(--font-body);
   background-color: var(--bg-color);
   color: var(--text-color);
   line-height: 1.6;
   overflow-x: hidden;
+  max-width: 100vw;
+  width: 100%;
   -webkit-font-smoothing: antialiased;
 }
 
